--- a/app/src/main/res/layout/journey_row.xml
+++ b/app/src/main/res/layout/journey_row.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
+            android:foreground="@drawable/image_view_gradient"
             android:scaleType="centerCrop"
             android:src="@drawable/background" />
 
@@ -84,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="15dp"
-            android:text=""
+            android:text="sample"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
