--- a/app/src/main/res/layout/fragment_privacy_policy.xml
+++ b/app/src/main/res/layout/fragment_privacy_policy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.SettingsFragment">
+    tools:context=".ui.settings.privacy.PrivacyPolicyFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,13 +12,14 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar2"
+            android:id="@+id/toolbar5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
-            app:title="Settings"
-            app:titleMarginStart="20dp"
+            app:logo="@drawable/ic_arrow_back_black"
+            app:title="Privacy Policy"
+            app:titleMarginStart="40dp"
             app:titleTextColor="@color/colorPrimary" />
 
         <ScrollView
@@ -31,210 +32,194 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="General"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp" />
-
-                <TextView
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Edit profile details"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp" />
-
-                <View
-                    android:id="@+id/divider4"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="15dp"
-                    android:background="?android:attr/listDivider" />
+                    android:gravity="center|center_vertical"
+                    android:text="@string/privacy" />
 
                 <TextView
-                    android:id="@+id/textView11"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Security"
-                    android:textColor="@color/colorPrimary"
+                    android:text="INFORMATION WE MAY COLLECT FROM YOU"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView6"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Change password"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp" />
-
-                <View
-                    android:id="@+id/divider5"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="15dp"
-                    android:background="?android:attr/listDivider" />
+                    android:gravity="left"
+                    android:text="@string/info" />
 
                 <TextView
-                    android:id="@+id/textView12"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Privacy"
-                    android:textColor="@color/colorPrimary"
+                    android:text="CONFIDENTIALITY AND SECURITY"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView7"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Privacy Policy"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp" />
-
-                <View
-                    android:id="@+id/divider7"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="15dp"
-                    android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="@font/roboto_medium"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:text="Help"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
+                    android:gravity="left"
+                    android:text="@string/security" />
 
                 <TextView
-                    android:id="@+id/textView19"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="FAQs"
-                    android:textColor="@color/textColor"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="TRACKING TECHNOLOGIES"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView22"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Provide Feedback"
-                    android:textColor="@color/textColor"
+                    android:gravity="left"
+                    android:text="@string/tracking" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="WHERE WE STORE YOUR PERSONAL INFORMATION"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView20"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Rate on the Google Play Store"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp" />
-
-                <View
-                    android:id="@+id/divider8"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="15dp"
-                    android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="@font/roboto_medium"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:text="About"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
+                    android:gravity="left"
+                    android:text="@string/personal_info" />
 
                 <TextView
-                    android:id="@+id/textView16"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="About Treflor"
-                    android:textColor="@color/textColor"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="SINGLE SIGN-ON"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView17"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Terms of Service"
-                    android:textColor="@color/textColor"
+                    android:gravity="left"
+                    android:text="@string/sign_in" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="ACCESS TO AND DELETION OF PERSONAL INFORMATION"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView21"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/roboto"
-                    android:gravity="center_vertical"
-                    android:paddingStart="20dp"
-                    android:text="Version: "
-                    android:textColor="@color/textColor"
+                    android:gravity="left"
+                    android:text="@string/access" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="USES MADE OF THE INFORMATION"
                     android:textSize="16sp" />
 
-                <View
-                android:id="@+id/divider6"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="15dp"
-                android:background="?android:attr/listDivider" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto"
+                    android:gravity="left"
+                    android:text="@string/uses" />
 
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/roboto_medium"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:text="Sign Out"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="CHANGES TO OUR PRIVACY POLICY"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto"
+                    android:gravity="left"
+                    android:text="@string/policy_changes" />
 
             </LinearLayout>
-
         </ScrollView>
-
     </LinearLayout>
-
 </FrameLayout>
